Backend quase completo, todas as listagens basicas do frontend em funcionamento
